# potpie

./: CHANGELOG.md  README.md  potpie_template.html  pyproject.toml
potpie/: __main__.py
templates/: operator_details_template.html  potpie_operator_template.html
tests/: test_template.py
